<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MovieDetailActivity"
        android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ToolbarTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/img_header"
                    android:contentDescription="@string/header_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    tools:srcCompat="@tools:sample/avatars[10]"
                    app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.MovieDetailActivity">

            <TextView
                    android:text="@string/user_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/txt_title"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_date"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="0dp"
                    android:layout_height="256dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="16dp">

                <ImageView
                        android:layout_width="match_parent"
                        android:contentDescription="@string/movie_poster"
                        android:layout_height="match_parent"
                        tools:srcCompat="@tools:sample/avatars[10]"
                        android:id="@+id/img_poster"
                        android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline"
                    app:layout_constraintGuide_percent="0.4"/>

            <TextView
                    tools:text="Avengers: Endgame"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_title"
                    app:layout_constraintTop_toTopOf="@+id/card_view"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/montserrat_bold"/>

            <TextView
                    android:text="@string/released_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_label_date"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title"
                    app:layout_constraintStart_toStartOf="@+id/txt_title"
                    android:textSize="12sp"/>

            <TextView
                    tools:text="12 December 2018"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_date"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_label_date"
                    app:layout_constraintStart_toStartOf="@+id/txt_label_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat_bold"/>

            <TextView
                    tools:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_score"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat_bold"/>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_favorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    app:backgroundTint="@color/colorAccent"
                    app:elevation="8dp"
                    app:icon="@drawable/ic_favorite"
                    app:iconTint="@color/colorText"
                    android:foregroundTint="@color/colorText"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginBottom="0dp"
                    app:layout_constraintBottom_toBottomOf="@id/card_view"/>

            <TextView
                    android:text="@string/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/card_view"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/card_view"
                    android:textSize="12sp"/>

            <TextView
                    tools:text="Overvieeewwww"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_overview"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:text="@string/cast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_cast"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_overview"
                    app:layout_constraintStart_toStartOf="@+id/txt_overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_cast"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/label_cast"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/preloader"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    app:lottie_rawRes="@raw/preloader"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true"
                    app:layout_constraintTop_toBottomOf="@+id/label_cast"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>