<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_movie"
          android:title="@string/menu_movie"
          android:icon="@drawable/ic_movie"/>
    <item android:id="@+id/menu_tv"
          android:title="@string/menu_tv"
          android:icon="@drawable/ic_tv"/>
    <item android:id="@+id/menu_favorite"
          android:title="@string/favorites"
          android:icon="@drawable/ic_favorite"/>
</menu>